test/files/neg/infix-op-positions.scala
object Test {
  Some(1) -! "test" // left associative operator
  "test" -!: Some(1) // right associative operators
}
