test/files/neg/infix-op-positions.check
infix-op-positions.scala:2: error: value -! is not a member of Some[Int]
  Some(1) -! "test" // left associative operator
          ^
infix-op-positions.scala:3: error: value -!: is not a member of Some[Int]
  "test" -!: Some(1) // right associative operators
         ^
two errors found
